<resources>
    <string name="app_name">50k Network</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_email_username">Email / Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_up">Sign up</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_investor_main">InvestorMainActivity</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="networkError">Network Error! Please check your connection</string>
    <!--<string name="wavelabs_app_id">sample-app-client</string>-->
    <!--<string name="wavelabs_app_secret">sample-app-secret</string>-->
    <string name="wavelabs_app_id">50k-app-client</string>
    <string name="wavelabs_app_secret">50k-app-secret</string>
    <string name="title_activity_startup_main">StartupMainActivity</string>
    <string name="title_activity_company_profile">CompanyProfileActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_startup_base_acitvity">StartupBaseAcitvity</string>
    <string name="title_activity_associate">AssociateActivity</string>
    <string name="title_activity_edit_associate">EditAssociateActivity</string>
    <!--<string name="ak_client_token">08c86b5bfbbc6bae452efede6a581137</string>-->
    <!--<string name="ak_app_id">1156227224396474</string>-->
    <string name="ak_client_token">d5e1ac44c3cb5984533411dae12116da</string>
    <string name="ak_app_id">285438828469639</string>
</resources>
