<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_app_nodp"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.wavelabs.nfund.LoginActivity"
    tools:showIn="@layout/activity_login">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:nestedScrollingEnabled="true"
                android:src="@drawable/ic_logo_nodp" />
            <!--
                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                                     </android.support.design.widget.TextInputLayout>
            -->
            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:background="@drawable/rounded_corner"
                android:gravity="center"
                android:hint="@string/prompt_email"
                android:inputType="text"
                android:maxLines="1"
                android:padding="10dp"
                android:singleLine="true"
                android:text="ashok50k" />


            <!--
                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                               </android.support.design.widget.TextInputLayout>
            -->
            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:background="@drawable/rounded_corner"
                android:gravity="center"
                android:hint="@string/prompt_password"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:padding="10dp"
                android:singleLine="true"
                android:text="Test@123" />


            <Button
                android:id="@+id/email_sign_in_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="26dp"
                android:background="@drawable/button_feedback"
                android:text="@string/action_sign_in"
                android:textColor="#ffffff"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="(OR)"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <Button
                android:id="@+id/linkedInConnect"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Connect with LinkedIn" />

            <Button
                android:id="@+id/testBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Test" />


        </LinearLayout>
    </ScrollView>
</LinearLayout>
