<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"

    android:paddingRight="@dimen/activity_horizontal_margin"

    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.wavelabs.fundr.RegisterActivity"
    tools:showIn="@layout/activity_register">

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/logoDashboardRegister"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/ic_logo_nodp" />

            <LinearLayout
                android:id="@+id/email_login_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/logoDashboardRegister"
                android:background="@drawable/rounded_layout"
                android:orientation="vertical"

                android:paddingBottom="16dp"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin">


                <RadioGroup
                    android:id="@+id/userRoleRBGroup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:orientation="horizontal"

                    >

                    <RadioButton
                        android:id="@+id/investorRB"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:checked="true"
                        android:gravity="center"
                        android:paddingRight="26dp"
                        android:text="Investor" />

                    <RadioButton
                        android:id="@+id/startupRB"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="Startup" />
                </RadioGroup>


                <EditText
                    android:id="@+id/fullname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_corner"
                    android:gravity="center"
                    android:hint="Full name"
                    android:imeActionLabel="@string/action_sign_up"
                    android:imeOptions="actionUnspecified"
                    android:inputType="text"
                    android:maxLines="1"
                    android:padding="10dp"
                    android:singleLine="true" />


                <EditText
                    android:id="@+id/email"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:background="@drawable/rounded_corner"
                    android:gravity="center"
                    android:hint="@string/prompt_email_username"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:padding="10dp"
                    android:singleLine="true" />


                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:background="@drawable/rounded_corner"
                    android:gravity="center"
                    android:hint="@string/prompt_password"
                    android:imeActionLabel="@string/action_sign_up"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:padding="10dp"
                    android:singleLine="true" />


                <EditText
                    android:id="@+id/contactNo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_marginTop="2dp"
                    android:background="@drawable/rounded_corner"
                    android:gravity="center"
                    android:hint="Contact number"
                    android:imeActionLabel="@string/action_sign_up"
                    android:imeOptions="actionUnspecified"
                    android:inputType="text"
                    android:maxLines="1"
                    android:padding="10dp"
                    android:singleLine="true" />


            </LinearLayout>

            <Button
                android:id="@+id/email_sign_up_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/email_login_form"
                android:layout_marginTop="16dp"
                android:background="@drawable/button_feedback"
                android:text="@string/action_sign_up"
                android:textColor="#ffffff"
                android:textStyle="bold" />
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
